@@ -27,7 +27,8 @@ ifndef::icons[:conum-guard: {sp}#{sp}]
 :uri-issues: {uri-repo}/issues
 :uri-search-issues: {uri-repo}/search?type=Issues
 :uri-chat: https://gitter.im/asciidoctor/asciidoctor
-:uri-ci: https://travis-ci.org/asciidoctor/jekyll-asciidoc
+:uri-ci-travis: https://travis-ci.org/asciidoctor/jekyll-asciidoc
+:uri-ci-appveyor: https://ci.appveyor.com/project/asciidoctor/jekyll-asciidoc
 :uri-gem: http://rubygems.org/gems/jekyll-asciidoc
 :uri-gem-asciidoctor: http://rubygems.org/gems/asciidoctor
 :uri-asciidoc: http://asciidoc.org
@@ -52,7 +53,8 @@ ifndef::icons[:conum-guard: {sp}#{sp}]
 ifdef::status[]
 image:https://img.shields.io/gem/v/jekyll-asciidoc.svg[Latest Release, link={uri-gem}]
 image:https://img.shields.io/badge/license-MIT-blue.svg[MIT License, link=#copyright-and-license]
-image:https://img.shields.io/travis/asciidoctor/jekyll-asciidoc/master.svg[Build Status (Travis CI), link={uri-ci}]
+image:https://img.shields.io/travis/asciidoctor/jekyll-asciidoc/master.svg[Build Status (Travis CI), link={uri-ci-travis}]
+image:https://ci.appveyor.com/api/projects/status/3cf1f8p2cyoaoc25/branch/master?svg=true&passingText=green%20bar&failingText=%23fail&pendingText=building[Build Status (AppVeyor), link={uri-ci-appveyor}]
 endif::[]
 
 A plugin for {uri-jekyll}[Jekyll] (>= 2.3.0) that converts {uri-asciidoc}[AsciiDoc] source files in your site to HTML pages using {uri-asciidoctor}[Asciidoctor].
